<resources>
    <string name="app_name">Popular Movies</string>
    <!-- main menu -->
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- main menu -->
    <string name="search">Search</string>
    <string name="fav_movies">Favorite</string>
    <string name="popular_movies">Popular</string>
    <string name="top_rated_movies">Top Rated</string>
    <!-- <string name="latest_movies">Latest</string> -->
    <string name="now_playing_movies">Now Playing</string>
    <string name="upcoming_movies">Upcoming</string>

    <!-- favorite btn-->
    <string name="add_fav">Add To Favorites</string>
    <string name="remove_fav">Remove From Favorites</string>

</resources>
