<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_icon"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        compat:showAsAction="ifRoom"/>
    <item
        android:id="@+id/rating_type"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="Sort Type"
        compat:showAsAction="always">

        <menu>
            <item
                android:id="@+id/popular"
                android:title="@string/popular_movies" />
            <item
                android:id="@+id/top_rated"
                android:title="@string/top_rated_movies" />
            <item
                android:id="@+id/now_playing"
                android:title="@string/now_playing_movies" />
            <item
                android:id="@+id/upcomming"
                android:title="@string/upcoming_movies" />
        </menu>
    </item>
    <item
        android:id="@+id/favorite"
        android:title="@string/fav_movies"
        android:icon="@drawable/ic_favorite_black_24dp"
        compat:showAsAction="ifRoom"/>
</menu>